# multi-camera-pose-estimation

./: CMakeLists.txt  README.md
include/HKIPcamera/: HKIPCamCapture.h
include/multi_pose/: multi_pose.h
include/pipeline/: metainfo_map.h  pipe_base.h  pipe_image.h  pipe_image_hkipcam.h  pipe_image_video.h  pipe_output.h  pipe_postprocess.h  pipe_preprocess.h  pipe_process.h  pipe_tensormerger.h  pipe_tensorsplit.h
src/: CMakeLists.txt
src/HKIPcamera/: CMakeLists.txt  HKIPCamCapture.cpp  HKIPcamera.cpp  HKIPcamera.h
src/HKIPcamera/npp_cuda/: CMakeLists.txt  npp_h264decoder.cu  npp_h264decoder.cuh
src/main/: CMakeLists.txt  main.cpp
src/multi_pose/: CMakeLists.txt  multi_pose.cpp
src/multi_pose/dcn_v2/: CMakeLists.txt  dcn_v2.h  vision.cpp
src/multi_pose/dcn_v2/cuda/: CMakeLists.txt  dcn_v2_cuda.cu  dcn_v2_im2col_cuda.cu  vision.h
src/pipeline/: CMakeLists.txt  metainfo_map.cpp  pipe_image.cpp  pipe_image_hkipcam.cpp  pipe_image_video.cpp  pipe_postprocess.cpp  pipe_preprocess.cpp  pipe_process.cpp  pipe_tensormerger.cpp  pipe_tensorsplit.cpp
